<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telainicial_titulo"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/btn_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telainicial_rotulo_btn_gps"/>
    <Button
        android:id="@+id/btn_rede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telainicial_rotulo_btn_rede"/>
    <Button
        android:id="@+id/btn_parar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telainicial_rotulo_btn_parar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telainicial_rotulo_latitude"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telainicial_rotulo_longitude"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="18sp"/>

</LinearLayout>